2010-03-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-06
	* filter endpaths from dataset 'Add Path' context menu
	* unassigned paths of the parent stream appear now bold in dataset
	editor dialog

	* tag V01-04-05
	* gui: fix path import, where upon import of an existing path its
	information would disappear from streams / datasets / OMs / etc.

	* tag V01-04-04
	* gui/db: fix for bug 28 (Vasu)
	* db: add stream/dataset psets to online converter as well (moved
	the methods to ConverterBase)
	* gui: fix bug such that paths can now be assigned to PDs if they
	are already associated with the parent stream
	* gui: indicate unassigned paths of the parent stream as bold in
	the 'Add Path' context menu of datasets
	* gui: indicate paths in a stream not yet assigned to any dataset
	as red in the tree view

2010-02-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-03
	* converter: OfflineConverter properly add stream/PD psets 

2010-02-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-02
	* gui: make EditDatasetDialog compatible with java 5.0

	* tag V01-04-01
	* add EditDatasetDialog.java to cvs

	* tag V01-04-00
	* gui: paths appear as daughter nodes to PDs under Streams
	* gui: paths can be added directly to PDs (and thereby to stream)
	* gui: PD editor
	* gui: pick configuration dialog really enforces selected
	releaseTag now
	* gui: order paths alphabetically in EC editor
	* gui: show parent stream in PD tooltip
	* gui: show parent EC in Stream tooltip
	* gui: display number of unassigned paths behind stream
	* gui: display output module icon;)

2010-02-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-12
	* bugfix to DatabaseMigrator (Vasu, 'Bug 26')

2010-02-09  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-11
	* bugfix to GUI (Vasu, 'Bug 25')

2010-02-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-10